unpackaged/main/default/objects/ET_ERP_Vehicle__c/ET_ERP_Vehicle__c.object-meta.xml
<CustomObject>
    <label>ET Vehicle</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Internal No</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ET Vehicles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>