unpackaged/main/default/objects/ET_ERP_Vehicle__c/fields/ET_Activity_Center__c.field-meta.xml
<CustomField>
    <fullName>ET_Activity_Center__c</fullName>
    <label>Activity Center</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Abu Dhabi Transport and leasing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>