unpackaged/main/default/objects/ET_ERP_Vehicle__c/fields/ET_Activity_Center_Code__c.field-meta.xml
<CustomField>
    <fullName>ET_Activity_Center_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Activity Center Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>