unpackaged/main/default/objects/ET_ERP_Vehicle__c/fields/ET_Actual_Mileage__c.field-meta.xml
<CustomField>
    <fullName>ET_Actual_Mileage__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Actual Mileage</label>
    <length>50</length>
    <type>Text</type>
</CustomField>