unpackaged/main/default/objects/ET_ERP_Vehicle__c/fields/ET_Asset_Op_Status__c.field-meta.xml
<CustomField>
    <fullName>ET_Asset_Op_Status__c</fullName>
    <label>Asset Op Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ready To Assign</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>