unpackaged/main/default/objects/ET_ERP_Vehicle__c/fields/ET_Battery_Type__c.field-meta.xml
<CustomField>
    <fullName>ET_Battery_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Battery Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>