unpackaged/main/default/objects/ET_ERP_Vehicle__c/fields/ET_Chassis_No__c.field-meta.xml
<CustomField>
    <fullName>ET_Chassis_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Chassis No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>