unpackaged/main/default/objects/ET_ERP_Vehicle__c/fields/ET_Classification__c.field-meta.xml
<CustomField>
    <fullName>ET_Classification__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Classification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>