unpackaged/main/default/objects/ET_ERP_Vehicle__c/fields/ET_Contract_No__c.field-meta.xml
<CustomField>
    <fullName>ET_Contract_No__c</fullName>
    <label>Contract No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>