unpackaged/main/default/objects/ET_ERP_Vehicle__c/fields/ET_Description__c.field-meta.xml
<CustomField>
    <fullName>ET_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>