unpackaged/main/default/objects/ET_ERP_Vehicle__c/fields/ET_Engine_Capacity__c.field-meta.xml
<CustomField>
    <fullName>ET_Engine_Capacity__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Engine Capacity</label>
    <length>50</length>
    <type>Text</type>
</CustomField>