unpackaged/main/default/objects/ET_ERP_Vehicle__c/fields/ET_Engine_Number__c.field-meta.xml
<CustomField>
    <fullName>ET_Engine_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Engine Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>