unpackaged/main/default/objects/ET_ERP_Vehicle__c/fields/ET_Family__c.field-meta.xml
<CustomField>
    <fullName>ET_Family__c</fullName>
    <label>Family</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HI ACE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>