unpackaged/main/default/objects/ET_ERP_Vehicle__c/fields/ET_Family_Details__c.field-meta.xml
<CustomField>
    <fullName>ET_Family_Details__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Family Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>