unpackaged/main/default/objects/ET_ERP_Vehicle__c/fields/ET_Fuel_Tank_Capacity__c.field-meta.xml
<CustomField>
    <fullName>ET_Fuel_Tank_Capacity__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fuel Tank Capacity</label>
    <length>50</length>
    <type>Text</type>
</CustomField>