unpackaged/main/default/objects/ET_ERP_Vehicle__c/fields/ET_Green_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>ET_Green_Vehicle__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Green Vehicle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>