unpackaged/main/default/objects/ET_ERP_Vehicle__c/fields/ET_Gross_Weight__c.field-meta.xml
<CustomField>
    <fullName>ET_Gross_Weight__c</fullName>
    <label>Gross Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>