unpackaged/main/default/objects/ET_ERP_Vehicle__c/fields/ET_Horse_Power__c.field-meta.xml
<CustomField>
    <fullName>ET_Horse_Power__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Horse Power</label>
    <length>50</length>
    <type>Text</type>
</CustomField>