unpackaged/main/default/objects/ET_ERP_Vehicle__c/fields/ET_Location__c.field-meta.xml
<CustomField>
    <fullName>ET_Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mosafah 1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>