unpackaged/main/default/objects/ET_ERP_Vehicle__c/fields/ET_Make__c.field-meta.xml
<CustomField>
    <fullName>ET_Make__c</fullName>
    <label>Make</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TOYOTA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>