unpackaged/main/default/objects/ET_ERP_Vehicle__c/fields/ET_Manufacture_Name__c.field-meta.xml
<CustomField>
    <fullName>ET_Manufacture_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Manufacture Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>