unpackaged/main/default/objects/ET_ERP_Vehicle__c/fields/ET_No_Of_Seats__c.field-meta.xml
<CustomField>
    <fullName>ET_No_Of_Seats__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>No Of Seats</label>
    <length>50</length>
    <type>Text</type>
</CustomField>