unpackaged/main/default/objects/ET_ERP_Vehicle__c/fields/ET_Number_Of_Tyres__c.field-meta.xml
<CustomField>
    <fullName>ET_Number_Of_Tyres__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Number Of Tyres</label>
    <length>100</length>
    <type>Text</type>
</CustomField>