unpackaged/main/default/objects/ET_ERP_Vehicle__c/fields/ET_Plate_Colour__c.field-meta.xml
<CustomField>
    <fullName>ET_Plate_Colour__c</fullName>
    <label>Plate Colour</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SIXTH CATEGORY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>