unpackaged/main/default/objects/ET_ERP_Vehicle__c/fields/ET_Plate_Issue__c.field-meta.xml
<CustomField>
    <fullName>ET_Plate_Issue__c</fullName>
    <label>Plate Issue</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ABU DHABI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>