unpackaged/main/default/objects/ET_ERP_Vehicle__c/fields/ET_Plate_Number__c.field-meta.xml
<CustomField>
    <fullName>ET_Plate_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Plate Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>