unpackaged/main/default/objects/ET_ERP_Vehicle__c/fields/ET_Plate_Type__c.field-meta.xml
<CustomField>
    <fullName>ET_Plate_Type__c</fullName>
    <label>Plate Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PRIVATE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>