unpackaged/main/default/objects/ET_ERP_Vehicle__c/fields/ET_Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>ET_Registration_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Registration Date</label>
    <type>DateTime</type>
</CustomField>