unpackaged/main/default/objects/ET_ERP_Vehicle__c/fields/ET_Registrration_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>ET_Registrration_Renewal_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Registrration Renewal Date</label>
    <type>DateTime</type>
</CustomField>