unpackaged/main/default/objects/ET_ERP_Vehicle__c/fields/ET_Sector__c.field-meta.xml
<CustomField>
    <fullName>ET_Sector__c</fullName>
    <label>Sector</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>