unpackaged/main/default/objects/ET_ERP_Vehicle__c/fields/ET_Seg_Activity_Center__c.field-meta.xml
<CustomField>
    <fullName>ET_Seg_Activity_Center__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Seg Activity Center</label>
    <length>255</length>
    <type>Text</type>
</CustomField>