unpackaged/main/default/objects/ET_ERP_Vehicle__c/fields/ET_segActivityCenterCode__c.field-meta.xml
<CustomField>
    <fullName>ET_segActivityCenterCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Seg Activity Center Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>