unpackaged/main/default/objects/ET_ERP_Vehicle__c/fields/ET_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>ET_Serial_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Serial Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>