unpackaged/main/default/objects/ET_ERP_Vehicle__c/fields/ET_Tyre_Type__c.field-meta.xml
<CustomField>
    <fullName>ET_Tyre_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tyre Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>