unpackaged/main/default/objects/ET_ERP_Vehicle__c/fields/ET_Vehicle_Color__c.field-meta.xml
<CustomField>
    <fullName>ET_Vehicle_Color__c</fullName>
    <label>Vehicle Color</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>WHITE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>