unpackaged/main/default/objects/ET_ERP_Vehicle__c/fields/ET_Vehicle_Life__c.field-meta.xml
<CustomField>
    <fullName>ET_Vehicle_Life__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vehicle Life</label>
    <length>100</length>
    <type>Text</type>
</CustomField>