unpackaged/main/default/objects/ET_ERP_Vehicle__c/fields/ET_Vehicle_Make_Country__c.field-meta.xml
<CustomField>
    <fullName>ET_Vehicle_Make_Country__c</fullName>
    <label>Vehicle Make Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Canada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>