unpackaged/main/default/objects/ET_ERP_Vehicle__c/fields/ET_Vehicle_Mode__c.field-meta.xml
<CustomField>
    <fullName>ET_Vehicle_Mode__c</fullName>
    <label>Vehicle Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CORP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>