unpackaged/main/default/objects/ET_ERP_Vehicle__c/fields/ET_Vehicle_SubType__c.field-meta.xml
<CustomField>
    <fullName>ET_Vehicle_SubType__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vehicle SubType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>