unpackaged/main/default/objects/ET_ERP_Vehicle__c/fields/ET_Workhop_Location__c.field-meta.xml
<CustomField>
    <fullName>ET_Workhop_Location__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Workhop Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>